Use ssh2 to tunnel remote socket
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
     "@types/shell-escape": "^0.2.0",
     "@types/sinon": "^10.0.2",
     "@types/split": "^1.0.0",
+    "@types/ssh2": "^0.5.48",
     "@types/stream-to-promise": "^2.2.1",
     "@types/tar-stream": "^2.2.1",
     "@types/through2": "^2.0.36",
@@ -273,6 +274,7 @@
     "semver": "^7.3.2",
     "shell-escape": "^0.2.0",
     "split": "^1.0.1",
+    "ssh2": "^1.5.0",
     "stream-to-promise": "^2.2.0",
     "string-width": "^4.2.0",
     "strip-ansi-stream": "^1.0.0",
